Adjust localization and add new messageBox string

--- a/ChatManager/Localization/en.json
+++ b/ChatManager/Localization/en.json
@@ -2,9 +2,9 @@
   "_comment1": "MainForm Menu",
   "fileToolStripMenuItem": "File",
   "openToolStripMenuItem": "Import",
+  "saveToolStripMenuItem": "Export",
   "loadAutosaveToolStripMenuItem": "Load autosave",
   "restoreBackupToolStripMenuItem": "Restore backup",
-  "saveToolStripMenuItem": "Export",
   "exitToolStripMenuItem": "Exit",
   "toolsToolStripMenuItem": "Tools",
   "charFolderToolStripMenuItem": "Open character folder",
@@ -20,10 +20,10 @@
   "downloadProgressToolStripMenuItem": "Download progress: PROGRESS%",
 
   "_comment2": "MainForm",
-  "tpGlobal": "Global Channels",
-  "tpPlayer": "Player Channels",
-  "tpGroup": "Group Channels",
-  "tpSystem": "System Channels",
+  "tpGlobal": "Global channels",
+  "tpPlayer": "Player channels",
+  "tpGroup": "Group channels",
+  "tpSystem": "System channels",
   "btnTrade": "Trade",
   "btnPvP": "PvP",
   "btnGeneral": "General",
@@ -34,19 +34,19 @@
   "btnSay": "Say",
   "btnWhisper": "Whisper",
   "btnOps": "Ops",
-  "btnOpsLead": "Ops Lead",
+  "btnOpsLead": "Ops lead",
   "btnGroup": "Group",
-  "btnOpsAnnou": "Ops Announce",
-  "btnOpsOfficer": "Ops Officer",
-  "btnCombat": "Combat Info",
+  "btnOpsAnnou": "Ops announce",
+  "btnOpsOfficer": "Ops officer",
+  "btnCombat": "Combat info",
   "btnConv": "Conversation",
-  "btnLogin": "Character Login",
-  "btnOpsInfo": "Ops Info",
-  "btnSystem": "System Feedback",
-  "btnGuildInfo": "Guild Info",
-  "btnGroupInfo": "Group Info",
-  "lblServerName": "Current Server:",
-  "lblCharName": "Current Charakter:",
+  "btnLogin": "Character login",
+  "btnOpsInfo": "Ops info",
+  "btnSystem": "System feedback",
+  "btnGuildInfo": "Guild info",
+  "btnGroupInfo": "Group info",
+  "lblServerName": "Current server:",
+  "lblCharName": "Current character:",
 
   "_comment3": "AboutForm",
   "AboutForm": "About this app",
