--- a/ChatManager/Localization/fr.json
+++ b/ChatManager/Localization/fr.json
@@ -115,7 +115,7 @@
   "UpdateIntervalWeekly": "Hebdomadaire",
   "chbUpdateDownload": "Télécharge les mises à jour manuellement",
 
-  "_comment8": "BackupSelector Strings",
+  "_comment8": "BackupSelectorForm",
   "BackupSelectorForm": "Restaurer la sauvegarde",
   "lblBackupDir": "Choisis le répertoire de sauvegarde",
   "lblBackupFiles": "Choisis le(s) fichier(s) de sauvegarde",
