--- a/ChatManager/Localization/fr.json
+++ b/ChatManager/Localization/fr.json
@@ -80,9 +80,11 @@
   "btnTheLeviathanDeselectAll": "Désélectionne tout",
 
   "_comment6": "MessageBox Strings",
+  "Err_AutosaveImport": "Aucun fichier de sauvegarde automatique n'a été trouvé!",
   "Err_ColorNotHex": "La couleur spécifiée dans la zone de texte ne correspond pas à la norme HEX.",
   "Err_NoExportFileSelected": "Choisis au moins une entrée dans la liste!",
   "Error_IsDetected": "Quelque chose a mal tourné!\nVeux-tu signaler le bogue?",
+  "Inf_AutosaveImport": "L'importation du caractère CHARNAME du serveur SERVERNAME a réussi!\nDernière modification: TIMESTAMP",
   "Inf_ExportedFiles": "FILECOUNT le(s) fichier(s) a (ont) été édité(s).",
   "Inf_RestartRequired": "L'application doit être redémarrée après cette modification!",
   "MessageBoxError": "Erreur",
