--- a/ChatManager/Localization/fr.json
+++ b/ChatManager/Localization/fr.json
@@ -86,6 +86,7 @@
   "Error_IsDetected": "Quelque chose a mal tourné!\nVeux-tu signaler le bogue?",
   "Inf_AutosaveImport": "L'importation du caractère CHARNAME du serveur SERVERNAME a réussi!\nDernière modification: TIMESTAMP",
   "Inf_ExportedFiles": "FILECOUNT le(s) fichier(s) a (ont) été édité(s).",
+  "Inf_NoFilesInBackupDir": "Il n'y a pas de fichiers dans le répertoire de sauvegarde!",
   "Inf_RestartRequired": "L'application doit être redémarrée après cette modification!",
   "MessageBoxError": "Erreur",
   "MessageBoxInfo": "Informations",
