--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -82,6 +82,7 @@
   "_comment6": "MessageBox Strings",
   "Err_AutosaveImport": "Es wurde keine Autosave Datei gefunden!",
   "Err_ColorNotHex": "Die angegebene Farbe in der Textbox entspricht nicht dem HEX-Standard.",
+  "Err_NoFileToDeleteSelected": "Bitte wähle mindestens eine Datei zum löschen aus!",
   "Err_NoExportFileSelected": "Bitte wähle mindestens einen Eintrag aus der Liste aus!",
   "Error_IsDetected": "Da ist was schief gelaufen!\nMöchtest du den Bug melden?",
   "Inf_AutosaveImport": "Es wurde erfolgreich der Charakter CHARNAME von dem Server SERVERNAME importiert!\nLetzte Bearbeitung am: TIMESTAMP",
@@ -124,5 +125,7 @@
   "lblBackupFiles": "Backup Datei(en) auswählen",
   "btnBackupSelectAll": "Alle auswählen",
   "btnBackupDeselectAll": "Alle abwählen",
+  "btnDeleteDir": "Verzeichnis löschen",
+  "btnDeleteFiles": "Datei(en) löschen",
   "btnRestore": "Wiederherstellen"
 }
