Add new Check for internet connection before updating

--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -94,11 +94,13 @@
   "MessageBoxNoUpdate": "Kein Update verfügbar",
   "MessageBoxUpdate": "Update verfügbar",
   "MessageBoxWarn": "Warnung",
+  "Question_MeteredConnection": "Es wurde eine gebührenpflichtige Verbindung entdeckt!\n\nDas herunterladen eines Updates über eine solche Verbindung kann zusätzliche Kosten verursachen.\n\nWillst du fortfahren?",
   "Update_IsAvailable": "Möchtest du jetzt aktualisieren?\nEs ist ein Update auf folgende Version verfügbar:",
   "Update_IsInstallReady": "Das Update ist bereit zur Installation!\nMit einem Klick auf 'OK' wird die Installation gestartet.",
   "Update_IsNotAvailable": "Es ist kein Update verfügbar!",
   "Warn_BackupDirMissing": "Es konnte kein Backup Verzeichnis erstellt werden!\nFortfahren auf eigene Gefahr!",
   "Warn_NoImportFound": "Es muss zuerst eine Datei importiert werden!",
+  "Warn_NoInternetConnection": "Es konnte keine aktive Internetverbindung gefunden werden!",
   "Warn_SWTORpathNotFound": "Der Pfad für die lokalen Dateien von SWTOR wurde nicht gefunden!\n\nIst das Spiel installiert?",
   "Warn_SWTORrunning": "Es wurde eine aktive SWTOR Instanz gefunden, bitte schließe das Spiel zuerst!\n\nAndernfalls kann die korrekte Funktion der Änderungen nicht garantiert werden.",
   "Warn_TextBoxEmpty": "Es wurden TEXTBOXCOUNTER leere Farbfelder gefunden!\nImportiere zuerst eine Datei oder befülle diese!",
