--- a/ChatManager/Localization/en.json
+++ b/ChatManager/Localization/en.json
@@ -94,11 +94,13 @@
   "MessageBoxNoUpdate": "No update available",
   "MessageBoxUpdate": "Update available",
   "MessageBoxWarn": "Warning",
+  "Question_MeteredConnection": "A metered connection was found!\n\nDownloads over metered connections can cause additional cost.\n\nDo you want to continue?",
   "Update_IsAvailable": "Do you want to update now?\nAn update to the following version is available:",
   "Update_IsInstallReady": "The update is ready for installation!\nClicking on 'OK' will start the installation.",
   "Update_IsNotAvailable": "There is no update available!",
   "Warn_BackupDirMissing": "No backup directory could be created!\nProceed at your own risk!",
   "Warn_NoImportFound": "A file must be imported first!",
+  "Warn_NoInternetConnection": "No active internet connection found!",
   "Warn_SWTORpathNotFound": "The path for SWTOR's local files was not found!\n\nIs the game installed?",
   "Warn_SWTORrunning": "An active SWTOR instance was found, please close the game first!\n\nOtherwise, the correct function of the changes cannot be guaranteed.",
   "Warn_TextBoxEmpty": "TEXTBOXCOUNTER empty color fields were found!\nImport a file first or fill them!",
