--- a/ChatManager/Localization/fr.json
+++ b/ChatManager/Localization/fr.json
@@ -94,11 +94,13 @@
   "MessageBoxNoUpdate": "Aucune mise à jour disponible",
   "MessageBoxUpdate": "Mise à jour disponible",
   "MessageBoxWarn": "Avertissement",
+  "Question_MeteredConnection": "Une connexion avec compteur a été trouvée!\n\nLes téléchargements sur des connexions avec compteur peuvent entraîner des coûts supplémentaires.\n\nVeux-tu continuer?",
   "Update_IsAvailable": "Veux-tu mettre à jour maintenant?\nUne mise à jour de la version suivante est disponible:",
   "Update_IsInstallReady": "La mise à jour est prête à être installée!\nEn cliquant sur 'OK', l'installation démarre.",
   "Update_IsNotAvailable": "Il n'y a pas de mise à jour disponible!",
   "Warn_BackupDirMissing": "Aucun répertoire de sauvegarde n'a pu être créé!\nProcède à tes propres risques!",
   "Warn_NoImportFound": "Un fichier doit d'abord être importé!",
+  "Warn_NoInternetConnection": "Aucune connexion Internet active n'a été trouvée!",
   "Warn_SWTORpathNotFound": "Le chemin d'accès aux fichiers locaux de SWTOR n'a pas été trouvé!\n\nLe jeu est-il installé?",
   "Warn_SWTORrunning": "Une instance active de SWTOR a été trouvée, veuillez d'abord fermer le jeu!\n\nDans le cas contraire, le bon fonctionnement des modifications ne peut être garanti.",
   "Warn_TextBoxEmpty": "TEXTBOXCOUNTER des champs de couleur vides ont été trouvés!\nImporte d'abord un fichier ou remplis-les!",
