Reorder Localization.jsons

--- a/ChatManager/Localization/de.json
+++ b/ChatManager/Localization/de.json
@@ -54,10 +54,20 @@
   "gitHubLinkButton": "Link zum GitHub Repository",
   "okButton": "Ok",
 
-  "_comment4": "ColorPickerForm",
+  "_comment4": "BackupSelectorForm",
+  "BackupSelectorForm": "Backup wiederherstellen",
+  "lblBackupDir": "Backupverzeichnis auswählen",
+  "lblBackupFiles": "Backup Datei(en) auswählen",
+  "btnBackupSelectAll": "Alle auswählen",
+  "btnBackupDeselectAll": "Alle abwählen",
+  "btnDeleteDir": "Verzeichnis löschen",
+  "btnDeleteFiles": "Datei(en) löschen",
+  "btnRestore": "Wiederherstellen",
+
+  "_comment5": "ColorPickerForm",
   "lblExample": "Das ist ein Beispieltext in der ausgewählten Farbe.",
 
-  "_comment5": "FileSelectorForm",
+  "_comment6": "FileSelectorForm",
   "FileSelectorForm": "Charakter wählen",
   "tabStarForge": "Star Forge",
   "tabSateleShan": "Satele Shan",
@@ -80,7 +90,23 @@
   "btnTheLeviathanSelect": "Auswählen",
   "btnTheLeviathanDeselectAll": "Alle abwählen",
 
-  "_comment6": "MessageBox Strings",
+  "_comment7": "SettingsForm Strings",
+  "SettingsForm": "Einstellungen",
+  "gbLanguage": "Sprachauswahl",
+  "gbGeneral": "Allgemeine Einstellungen",
+  "chbReloadOnStartup": "Öffnen der letzten Farben beim starten der App",
+  "chbSaveOnClose": "Speichern der letzten Farben beim schließen der App",
+  "chbAutosave": "Autosave aktivieren",
+  "lblAutosaveInterval": "Autosave Intervall (Minuten)",
+  "btnResetSettings": "Einstellungen zurücksetzen",
+  "gbUpdater": "Update-Einstellungen",
+  "lblUpdateIntervall": "Suchintervall",
+  "UpdateIntervalOnStart": "Beim Start",
+  "UpdateIntervalDaily": "Täglich",
+  "UpdateIntervalWeekly": "Wöchentlich",
+  "chbUpdateDownload": "Updates manuell herunterladen",
+
+  "_comment8": "MessageBox Strings",
   "Err_AutosaveImport": "Es wurde keine Autosave Datei gefunden!",
   "Err_ColorNotHex": "Die angegebene Farbe in der Textbox entspricht nicht dem HEX-Standard.",
   "Err_NoFileToDeleteSelected": "Bitte wähle mindestens eine Datei zum löschen aus!",
@@ -105,31 +131,5 @@
   "Warn_NoInternetConnection": "Es konnte keine aktive Internetverbindung gefunden werden!",
   "Warn_SWTORpathNotFound": "Der Pfad für die lokalen Dateien von SWTOR wurde nicht gefunden!\n\nIst das Spiel installiert?",
   "Warn_SWTORrunning": "Es wurde eine aktive SWTOR Instanz gefunden, bitte schließe das Spiel zuerst!\n\nAndernfalls kann die korrekte Funktion der Änderungen nicht garantiert werden.",
-  "Warn_TextBoxEmpty": "Es wurden TEXTBOXCOUNTER leere Farbfelder gefunden!\nImportiere zuerst eine Datei oder befülle diese!",
-
-  "_comment7": "SettingsForm Strings",
-  "SettingsForm": "Einstellungen",
-  "gbLanguage": "Sprachauswahl",
-  "gbGeneral": "Allgemeine Einstellungen",
-  "chbReloadOnStartup": "Öffnen der letzten Farben beim starten der App",
-  "chbSaveOnClose": "Speichern der letzten Farben beim schließen der App",
-  "chbAutosave": "Autosave aktivieren",
-  "lblAutosaveInterval": "Autosave Intervall (Minuten)",
-  "btnResetSettings": "Einstellungen zurücksetzen",
-  "gbUpdater": "Update-Einstellungen",
-  "lblUpdateIntervall": "Suchintervall",
-  "UpdateIntervalOnStart": "Beim Start",
-  "UpdateIntervalDaily": "Täglich",
-  "UpdateIntervalWeekly": "Wöchentlich",
-  "chbUpdateDownload": "Updates manuell herunterladen",
-
-  "_comment8": "BackupSelectorForm",
-  "BackupSelectorForm": "Backup wiederherstellen",
-  "lblBackupDir": "Backupverzeichnis auswählen",
-  "lblBackupFiles": "Backup Datei(en) auswählen",
-  "btnBackupSelectAll": "Alle auswählen",
-  "btnBackupDeselectAll": "Alle abwählen",
-  "btnDeleteDir": "Verzeichnis löschen",
-  "btnDeleteFiles": "Datei(en) löschen",
-  "btnRestore": "Wiederherstellen"
+  "Warn_TextBoxEmpty": "Es wurden TEXTBOXCOUNTER leere Farbfelder gefunden!\nImportiere zuerst eine Datei oder befülle diese!"
 }
