--- a/ChatManager/Localization/en.json
+++ b/ChatManager/Localization/en.json
@@ -54,10 +54,20 @@
   "gitHubLinkButton": "Link to GitHub Repository",
   "okButton": "Ok",
 
-  "_comment4": "ColorPickerForm",
+  "_comment4": "BackupSelectorForm",
+  "BackupSelectorForm": "Restore backup",
+  "lblBackupDir": "Choose backup directory",
+  "lblBackupFiles": "Choose backup file(s)",
+  "btnBackupSelectAll": "Select all",
+  "btnBackupDeselectAll": "Deselect all",
+  "btnDeleteDir": "Delete directory",
+  "btnDeleteFiles": "Delete file(s)",
+  "btnRestore": "Restore",
+
+  "_comment5": "ColorPickerForm",
   "lblExample": "This is a sample text in the selected color.",
 
-  "_comment5": "FileSelectorForm",
+  "_comment6": "FileSelectorForm",
   "FileSelectorForm": "Choose character",
   "tabStarForge": "Star Forge",
   "tabSateleShan": "Satele Shan",
@@ -80,7 +90,23 @@
   "btnTheLeviathanSelect": "Select",
   "btnTheLeviathanDeselectAll": "Deselect all",
 
-  "_comment6": "MessageBox Strings",
+  "_comment7": "SettingsForm Strings",
+  "SettingsForm": "Settings",
+  "gbLanguage": "Language selection",
+  "gbGeneral": "General settings",
+  "chbReloadOnStartup": "Reload last colors when starting the app",
+  "chbSaveOnClose": "Save last colors when closing the app",
+  "chbAutosave": "Enable autosave",
+  "lblAutosaveInterval": "Autosave interval (minutes)",
+  "btnResetSettings": "Reset Settings",
+  "gbUpdater": "Update settings",
+  "lblUpdateIntervall": "Search interval",
+  "UpdateIntervalOnStart": "On startup",
+  "UpdateIntervalDaily": "Daily",
+  "UpdateIntervalWeekly": "Weekly",
+  "chbUpdateDownload": "Download updates manually",
+
+  "_comment8": "MessageBox Strings",
   "Err_AutosaveImport": "No autosave file was found!",
   "Err_ColorNotHex": "The specified color in the text box does not correspond to the HEX standard.",
   "Err_NoFileToDeleteSelected": "Please select at least one file from the list!",
@@ -105,31 +131,5 @@
   "Warn_NoInternetConnection": "No active internet connection found!",
   "Warn_SWTORpathNotFound": "The path for SWTOR's local files was not found!\n\nIs the game installed?",
   "Warn_SWTORrunning": "An active SWTOR instance was found, please close the game first!\n\nOtherwise, the correct function of the changes cannot be guaranteed.",
-  "Warn_TextBoxEmpty": "TEXTBOXCOUNTER empty color fields were found!\nImport a file first or fill them!",
-
-  "_comment7": "SettingsForm Strings",
-  "SettingsForm": "Settings",
-  "gbLanguage": "Language selection",
-  "gbGeneral": "General settings",
-  "chbReloadOnStartup": "Reload last colors when starting the app",
-  "chbSaveOnClose": "Save last colors when closing the app",
-  "chbAutosave": "Enable autosave",
-  "lblAutosaveInterval": "Autosave interval (minutes)",
-  "btnResetSettings": "Reset Settings",
-  "gbUpdater": "Update settings",
-  "lblUpdateIntervall": "Search interval",
-  "UpdateIntervalOnStart": "On startup",
-  "UpdateIntervalDaily": "Daily",
-  "UpdateIntervalWeekly": "Weekly",
-  "chbUpdateDownload": "Download updates manually",
-
-  "_comment8": "BackupSelectorForm",
-  "BackupSelectorForm": "Restore backup",
-  "lblBackupDir": "Choose backup directory",
-  "lblBackupFiles": "Choose backup file(s)",
-  "btnBackupSelectAll": "Select all",
-  "btnBackupDeselectAll": "Deselect all",
-  "btnDeleteDir": "Delete directory",
-  "btnDeleteFiles": "Delete file(s)",
-  "btnRestore": "Restore"
+  "Warn_TextBoxEmpty": "TEXTBOXCOUNTER empty color fields were found!\nImport a file first or fill them!"
 }
