--- a/ChatManager/Localization/fr.json
+++ b/ChatManager/Localization/fr.json
@@ -54,10 +54,20 @@
   "gitHubLinkButton": "Lien vers le dépôt GitHub",
   "okButton": "Ok",
 
-  "_comment4": "ColorPickerForm",
+  "_comment4": "BackupSelectorForm",
+  "BackupSelectorForm": "Restaurer la sauvegarde",
+  "lblBackupDir": "Choisis le répertoire de sauvegarde",
+  "lblBackupFiles": "Choisis le(s) fichier(s) de sauvegarde",
+  "btnBackupSelectAll": "Sélectionner tout",
+  "btnBackupDeselectAll": "Désélectionne tout",
+  "btnDeleteDir": "Supprimer le répertoire",
+  "btnDeleteFiles": "Supprimer le(s) fichier(s)",
+  "btnRestore": "Restaurer",
+
+  "_comment5": "ColorPickerForm",
   "lblExample": "Voici un exemple de texte dans la couleur sélectionnée.",
 
-  "_comment5": "FileSelectorForm",
+  "_comment6": "FileSelectorForm",
   "FileSelectorForm": "Choisis un personnage",
   "tabStarForge": "Star Forge",
   "tabSateleShan": "Satele Shan",
@@ -80,7 +90,23 @@
   "btnTheLeviathanSelect": "Sélectionne",
   "btnTheLeviathanDeselectAll": "Désélectionne tout",
 
-  "_comment6": "MessageBox Strings",
+  "_comment7": "SettingsForm Strings",
+  "SettingsForm": "Paramètres",
+  "gbLanguage": "Choix de la langue",
+  "gbGeneral": "Paramètres généraux",
+  "chbReloadOnStartup": "Recharger les dernières couleurs au démarrage de l'application",
+  "chbSaveOnClose": "Enregistrer les dernières couleurs en fermant l'application",
+  "chbAutosave": "Activer la sauvegarde automatique",
+  "lblAutosaveInterval": "Intervalle Autosave (minutes)",
+  "btnResetSettings": "Réinitialiser les paramètres",
+  "gbUpdater": "Mettre à jour les réglages",
+  "lblUpdateIntervall": "Recherche Intervalle",
+  "UpdateIntervalOnStart": "Au démarrage",
+  "UpdateIntervalDaily": "Quotidiennement",
+  "UpdateIntervalWeekly": "Hebdomadaire",
+  "chbUpdateDownload": "Télécharge les mises à jour manuellement",
+
+  "_comment8": "MessageBox Strings",
   "Err_AutosaveImport": "Aucun fichier de sauvegarde automatique n'a été trouvé!",
   "Err_ColorNotHex": "La couleur spécifiée dans la zone de texte ne correspond pas à la norme HEX.",
   "Err_NoFileToDeleteSelected": "Choisis au moins un fichier dans la liste!",
@@ -105,31 +131,5 @@
   "Warn_NoInternetConnection": "Aucune connexion Internet active n'a été trouvée!",
   "Warn_SWTORpathNotFound": "Le chemin d'accès aux fichiers locaux de SWTOR n'a pas été trouvé!\n\nLe jeu est-il installé?",
   "Warn_SWTORrunning": "Une instance active de SWTOR a été trouvée, veuillez d'abord fermer le jeu!\n\nDans le cas contraire, le bon fonctionnement des modifications ne peut être garanti.",
-  "Warn_TextBoxEmpty": "TEXTBOXCOUNTER des champs de couleur vides ont été trouvés!\nImporte d'abord un fichier ou remplis-les!",
-
-  "_comment7": "SettingsForm Strings",
-  "SettingsForm": "Paramètres",
-  "gbLanguage": "Choix de la langue",
-  "gbGeneral": "Paramètres généraux",
-  "chbReloadOnStartup": "Recharger les dernières couleurs au démarrage de l'application",
-  "chbSaveOnClose": "Enregistrer les dernières couleurs en fermant l'application",
-  "chbAutosave": "Activer la sauvegarde automatique",
-  "lblAutosaveInterval": "Intervalle Autosave (minutes)",
-  "btnResetSettings": "Réinitialiser les paramètres",
-  "gbUpdater": "Mettre à jour les réglages",
-  "lblUpdateIntervall": "Recherche Intervalle",
-  "UpdateIntervalOnStart": "Au démarrage",
-  "UpdateIntervalDaily": "Quotidiennement",
-  "UpdateIntervalWeekly": "Hebdomadaire",
-  "chbUpdateDownload": "Télécharge les mises à jour manuellement",
-
-  "_comment8": "BackupSelectorForm",
-  "BackupSelectorForm": "Restaurer la sauvegarde",
-  "lblBackupDir": "Choisis le répertoire de sauvegarde",
-  "lblBackupFiles": "Choisis le(s) fichier(s) de sauvegarde",
-  "btnBackupSelectAll": "Sélectionner tout",
-  "btnBackupDeselectAll": "Désélectionne tout",
-  "btnDeleteDir": "Supprimer le répertoire",
-  "btnDeleteFiles": "Supprimer le(s) fichier(s)",
-  "btnRestore": "Restaurer"
+  "Warn_TextBoxEmpty": "TEXTBOXCOUNTER des champs de couleur vides ont été trouvés!\nImporte d'abord un fichier ou remplis-les!"
 }
