--- a/ChatManager/Properties/Resources.resx
+++ b/ChatManager/Properties/Resources.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="bugMailPath" xml:space="preserve">
+    <value>mailto:swtor-chatmanager@fire.fundersclub.com?subject=[BUG]</value>
+  </data>
+  <data name="bugPath" xml:space="preserve">
+    <value>https://github.com/Zagrthos/SWTOR-ChatColorManager/issues/new/choose</value>
+  </data>
+  <data name="githubPath" xml:space="preserve">
+    <value>https://github.com/Zagrthos/SWTOR-ChatColorManager/</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -129,5 +138,8 @@
   </data>
   <data name="Logo_small" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo_small.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="supportPath" xml:space="preserve">
+    <value>https://github.com/Zagrthos/SWTOR-ChatColorManager/issues/</value>
   </data>
 </root>
