--- a/ChatManager/Localization/en.json
+++ b/ChatManager/Localization/en.json
@@ -50,7 +50,7 @@
 
   "_comment3": "AboutForm",
   "AboutForm": "About this app",
-  "copyrightButton": "Link to logo creator",
+  "licencesButton": "Licenses",
   "gitHubLinkButton": "Link to GitHub Repository",
   "okButton": "Ok",
 
@@ -90,7 +90,11 @@
   "btnTheLeviathanSelect": "Select",
   "btnTheLeviathanDeselectAll": "Deselect all",
 
-  "_comment7": "SettingsForm Strings",
+  "_comment7": "LicencesForm Strings",
+  "LicencesForm": "Licences",
+  "lblLicencesHead": "Licences from every software part which is used in this application",
+
+  "_comment8": "SettingsForm Strings",
   "SettingsForm": "Settings",
   "gbLanguage": "Language selection",
   "gbGeneral": "General settings",
@@ -106,7 +110,7 @@
   "UpdateIntervalWeekly": "Weekly",
   "chbUpdateDownload": "Download updates manually",
 
-  "_comment8": "MessageBox Strings",
+  "_comment9": "MessageBox Strings",
   "Err_AutosaveImport": "No autosave file was found!",
   "Err_ColorNotHex": "The specified color in the text box does not correspond to the HEX standard.",
   "Err_NoFileToDeleteSelected": "Please select at least one file from the list!",
