--- a/ChatManager/Properties/Resources.resx
+++ b/ChatManager/Properties/Resources.resx
@@ -124,6 +124,9 @@
     <value>https://github.com/Zagrthos/SWTOR-ChatColorManager/issues/new/choose</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Chat_Layer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Chat_Layer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Font" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Font.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
