--- a/ChatManager/Properties/Resources.resx
+++ b/ChatManager/Properties/Resources.resx
@@ -211,6 +211,9 @@ Unsplash grants you an irrevocable, nonexclusive, worldwide copyright license to
   <data name="Logo_small" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo_small.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="releaseApiPath" xml:space="preserve">
+    <value>https://api.github.com/repos/Zagrthos/SWTOR-ChatColorManager/releases/tags/</value>
+  </data>
   <data name="supportPath" xml:space="preserve">
     <value>https://github.com/Zagrthos/SWTOR-ChatColorManager/issues/</value>
   </data>
